# PlanningToolV2

./: .gitignore  BeispielProjektDaten.xlsx  Beispiel_Projekt.xlsx  Fragen.md  Notes.md  Planungsdaten_2026-06-17.xlsx  Planungstool.spec  README.md  build_exe.ps1  docs.md  main.py  plannerV2_documentation.aux  plannerV2_documentation.lof  plannerV2_documentation.lot  plannerV2_documentation.out  plannerV2_documentation.tex  plannerV2_documentation.toc  pyproject.toml  requirements.txt
New folder/: freie_tage.json  lehrveranstaltungen.json  raeume.json  studienrichtungen.json
data/: fachrichtungen.json  freie_tage.json  freie_tage_2026.json  konflikte.json  lehrveranstaltungen.json  raeume.json  semester.json  termine.json
data/freie_tage/: freie_tage_2026.json
data_test/: freie_tage.json  geplante_semester.json  lehrveranstaltungen.json  raeume.json  semester.json  termine.json
default_tables/: tu_wien_etit_lva_vortragende_2026S.csv  tu_wien_raeume.csv
src/: konflikte.json  settings.json  studiensemester.json
src/core/: models.py  states.py
src/services/: app_config_service.py  conflict_labels.py  conflict_service.py  data_folder_service.py  data_service.py  default_catalog_service.py  excel_exchange_service.py  filter_service.py  free_day_id_service.py  free_day_import_service.py  id_service.py  import_merge_service.py  semester_generation.py  semester_rules.py  semester_tools_service.py  termin_occurrence_service.py  termin_service.py  undo_service.py
src/ui/: resources.qrc  resources_rc.py
src/ui/planner/: cell.py  (+10 more)
src/utils/: fix_termine_series.py
(+61 files in other folders)
